new figures and shite

--- a/notebooks/figures/HighK-multimodal.ipynb
+++ b/notebooks/figures/HighK-multimodal.ipynb
@@ -117,8 +117,13 @@
     "    unimodals = []\n",
     "    means = []\n",
     "    for j in np.unique(y):\n",
-    "        unimodals.append(unimodal_P(samples[y==j], data))\n",
-    "        means.append(MAP_sample(data, samples[y==j], joker_pars))\n",
+    "        sub_samples = samples[y==j]\n",
+    "        if len(sub_samples) == 1:\n",
+    "            unimodals.append(True)\n",
+    "            means.append(sub_samples)\n",
+    "        else:\n",
+    "            unimodals.append(unimodal_P(sub_samples, data))\n",
+    "            means.append(MAP_sample(data, sub_samples, joker_pars))\n",
     "        \n",
     "    return all(unimodals), means"
    ]
@@ -169,15 +174,6 @@
    "outputs": [],
    "source": [
     "plt.hist(nsamples[bimodal], bins='auto');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(MAP_samples), len(bi_stars)"
    ]
   },
   {
@@ -277,12 +273,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add APOGEE DR14 info:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_catalog = tbl_with_ness[catalog.colnames + ['M1', 'M2_min']]"
+    "allstar_tbl = fits.getdata('/Users/adrian/data/APOGEE_DR14/allStar-l31c.2.fits')\n",
+    "allstar_tbl = allstar_tbl[np.isin(allstar_tbl['APOGEE_ID'], tbl_with_ness['APOGEE_ID'])]\n",
+    "\n",
+    "# trim the duplicates...\n",
+    "_, unq_idx = np.unique(allstar_tbl['APOGEE_ID'], return_index=True)\n",
+    "allstar_tbl = allstar_tbl[unq_idx]\n",
+    "assert len(allstar_tbl) == len(tbl_with_ness)//2\n",
+    "\n",
+    "allstar_tbl = Table(allstar_tbl)\n",
+    "allstar_tbl.rename_column('K', 'KS')\n",
+    "allstar_tbl.rename_column('K_ERR', 'KS_ERR')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_catalog = join(tbl_with_ness[catalog.colnames + ['M1', 'M2_min']], allstar_tbl, keys='APOGEE_ID')\n",
+    "output_catalog[:1]"
    ]
   },
   {
@@ -347,7 +370,7 @@
    "outputs": [],
    "source": [
     "output_catalog.write(path.join(table_path, 'highK-bimodal.fits'), overwrite=True)\n",
-    "output_catalog[:4].write('../../paper/1-catalog/tables/bimodal-top.tex', overwrite=True)"
+    "# output_catalog[:4].write('../../paper/1-catalog/tables/bimodal-top.tex', overwrite=True)"
    ]
   },
   {
