--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -12,7 +12,7 @@
     "# Third-party\n",
     "from astropy.io import fits\n",
     "from astropy.stats import median_absolute_deviation\n",
-    "from astropy.table import Table, join\n",
+    "from astropy.table import Table, QTable, join\n",
     "from astropy.time import Time\n",
     "import astropy.units as u\n",
     "import matplotlib as mpl\n",
@@ -32,7 +32,7 @@
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
     "                        StarResult, Status, JokerRun)\n",
     "from twoface.plot import plot_two_panel, plot_phase_fold, plot_data_orbits, _RV_LBL\n",
-    "from twoface.mass import get_m2_min, mf"
+    "from twoface.mass import get_m2_min, mf, asini, a2sini, stellar_radius"
    ]
   },
   {
@@ -212,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tbl = Table(rows)"
+    "tbl = Table(rows, masked=True)"
    ]
   },
   {
@@ -234,17 +234,24 @@
     "\n",
     "# trim the duplicates...\n",
     "_, unq_idx = np.unique(ness_tbl['APOGEE_ID'], return_index=True)\n",
-    "ness_tbl = ness_tbl[unq_idx]\n",
-    "\n",
-    "tbl_with_ness = join(tbl, ness_tbl, keys='APOGEE_ID', join_type='outer')\n",
-    "assert len(tbl_with_ness) == len(tbl)"
+    "ness_tbl = ness_tbl[unq_idx]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compute m2_min using Ness mass"
+    "### Compute m2_min, a2sini, R1 using Ness mass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stddev(vals):\n",
+    "    return 1.5 * median_absolute_deviation(vals, ignore_nan=True)"
    ]
   },
   {
@@ -256,53 +263,87 @@
     "rnd = np.random.RandomState(seed=42)\n",
     "N = rnd.normal\n",
     "\n",
-    "mass_ratio = np.full(len(tbl_with_ness), np.nan)\n",
-    "mass_ratio_err = np.full(len(tbl_with_ness), np.nan)\n",
-    "m1 = np.full(len(tbl_with_ness), np.nan) * u.Msun\n",
-    "m1_err = np.full(len(tbl_with_ness), np.nan) * u.Msun\n",
-    "m2_min = np.full(len(tbl_with_ness), np.nan) * u.Msun\n",
-    "m2_min_err = np.full(len(tbl_with_ness), np.nan) * u.Msun\n",
+    "tbl['M1'] = np.full(len(tbl), np.nan) * u.Msun\n",
+    "tbl['M1_err'] = np.full(len(tbl), np.nan) * u.Msun\n",
+    "tbl['M2_min'] = np.full(len(tbl), np.nan) * u.Msun\n",
+    "tbl['M2_min_err'] = np.full(len(tbl), np.nan) * u.Msun\n",
+    "tbl['q_min'] = np.full(len(tbl), np.nan)\n",
+    "tbl['q_min_err'] = np.full(len(tbl), np.nan)\n",
     "\n",
-    "n_samples = 1024\n",
-    "for i, row in tqdm.tqdm(enumerate(tbl_with_ness)):\n",
-    "    if tbl_with_ness['lnM'].mask[i]:\n",
+    "tbl['R1'] = np.full(len(tbl), np.nan) * u.Rsun\n",
+    "tbl['R1_err'] = np.full(len(tbl), np.nan) * u.Rsun\n",
+    "tbl['a_sini'] = np.full(len(tbl), np.nan) * u.au\n",
+    "tbl['a_sini_err'] = np.full(len(tbl), np.nan) * u.au\n",
+    "tbl['a2_sini'] = np.full(len(tbl), np.nan) * u.au\n",
+    "tbl['a2_sini_err'] = np.full(len(tbl), np.nan) * u.au\n",
+    "\n",
+    "n_samples = 8192\n",
+    "for i, row in tqdm.tqdm(enumerate(tbl)):\n",
+    "    ness_row = ness_tbl[ness_tbl['APOGEE_ID'] == row['APOGEE_ID']]\n",
+    "    if len(ness_row) == 0:\n",
     "        continue\n",
     "        \n",
-    "    m1_samples = np.exp(N(row['lnM'], row['e_logM'], size=n_samples)) * u.Msun\n",
+    "    star = AllStar.get_apogee_id(session, row['APOGEE_ID'])\n",
+    "        \n",
+    "    m1_samples = np.exp(N(ness_row['lnM'], ness_row['e_logM'], size=n_samples)) * u.Msun\n",
+    "    loggs = N(star.logg, star.logg_err, n_samples)\n",
     "    \n",
     "    if row['converged']:\n",
-    "        mass_func = mf(P=N(row['P'], row['P_err'], n_samples) * tbl_with_ness['P'].unit, \n",
-    "                       K=N(row['K'], row['K_err'], n_samples) * tbl_with_ness['K'].unit,\n",
-    "                       e=N(row['e'], row['e_err'], n_samples))\n",
+    "        Ps = N(row['P'], row['P_err'], n_samples) * tbl['P'].unit\n",
+    "        Ks = N(row['K'], row['K_err'], n_samples) * tbl['K'].unit\n",
+    "        es = N(row['e'], row['e_err'], n_samples)\n",
+    "        \n",
     "    else:\n",
-    "        mass_func = mf(P=row['P'] * tbl_with_ness['P'].unit, \n",
-    "                       K=row['K'] * tbl_with_ness['K'].unit,\n",
-    "                       e=row['e'])\n",
-    "        mass_func = u.Quantity([mass_func] * n_samples)\n",
+    "        Ps = ([row['P']] * n_samples) * tbl['P'].unit\n",
+    "        Ks = ([row['K']] * n_samples) * tbl['K'].unit\n",
+    "        es = np.array([row['e']] * n_samples)\n",
+    "        \n",
+    "        \n",
+    "    mass_func = mf(P=Ps, K=Ks, e=es)\n",
     "    m2_mins = get_m2_min(m1_samples, mass_func)\n",
-    "\n",
-    "    med_m1 = np.median(m1_samples)\n",
-    "    med_m2 = np.nanmedian(m2_mins)\n",
+    "    asinis = asini(Ps, es, Ks, m1_samples, m2_mins)\n",
+    "    a2sinis = a2sini(Ps, es, Ks, m1_samples, m2_mins)\n",
+    "    R1s = stellar_radius(loggs, m1_samples).to(u.Rsun)\n",
     "    \n",
-    "    m1[i] = med_m1\n",
-    "    m1_err[i] = 1.5*median_absolute_deviation(m1_samples)\n",
-    "    m2_min[i] = med_m2\n",
-    "    m2_min_err[i] = 1.5*median_absolute_deviation(m2_mins)\n",
-    "    mass_ratio[i] = (med_m2 / med_m1).decompose().value\n",
-    "    try:\n",
-    "        mass_ratio_err[i] = 1.5*median_absolute_deviation(m2_mins / m1_samples, ignore_nan=True).decompose().value\n",
-    "    except AttributeError:\n",
-    "        mass_ratio_err[i] = np.nan\n",
+    "    tbl['M1'][i] = np.median(m1_samples).to(u.Msun).value\n",
+    "    tbl['M2_min'][i] = np.nanmedian(m2_mins).to(u.Msun).value\n",
+    "    tbl['a_sini'][i] = np.nanmedian(asinis).to(u.au).value\n",
+    "    tbl['a2_sini'][i] = np.nanmedian(a2sinis).to(u.au).value\n",
+    "    tbl['R1'][i] = np.nanmedian(R1s).to(u.Rsun).value\n",
     "    \n",
-    "tbl_with_ness['M1'] = m1\n",
-    "tbl_with_ness['M1_err'] = m1_err\n",
-    "tbl_with_ness['M2_min'] = m2_min\n",
-    "tbl_with_ness['M2_min_err'] = m2_min_err\n",
+    "    tbl['M1_err'][i] = stddev(m1_samples).to(u.Msun).value\n",
+    "    tbl['M2_min_err'][i] = stddev(m2_mins).to(u.Msun).value\n",
+    "    tbl['a_sini_err'][i] = stddev(asinis).to(u.au).value\n",
+    "    tbl['a2_sini_err'][i] = stddev(a2sinis).to(u.au).value\n",
+    "    tbl['R1_err'][i] = stddev(R1s).to(u.Rsun).value\n",
+    "    \n",
+    "tbl['q_min'] = (u.Quantity(tbl['M2_min']) / u.Quantity(tbl['M1'])).decompose()\n",
+    "tbl['q_min_err'] = tbl['q_min'] * \\\n",
+    "                                np.sqrt((tbl['M2_min_err']/tbl['M2_min'])**2 + \n",
+    "                                        (tbl['M1_err']/tbl['M1'])**2) \n",
     "\n",
-    "tbl_with_ness['M1'].mask = np.isnan(tbl_with_ness['M1'])\n",
-    "tbl_with_ness['M1_err'].mask = np.isnan(tbl_with_ness['M1'])\n",
-    "tbl_with_ness['M2_min'].mask = np.isnan(tbl_with_ness['M1'])\n",
-    "tbl_with_ness['M2_min_err'].mask = np.isnan(tbl_with_ness['M1'])"
+    "mask_ = np.isnan(tbl['M1']) | np.isnan(tbl['M2_min'])\n",
+    "tbl['M1'].mask = mask_\n",
+    "tbl['M1_err'].mask = mask_\n",
+    "tbl['M2_min'].mask = mask_\n",
+    "tbl['M2_min_err'].mask = mask_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add Ness columns following our columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbl_with_ness = join(tbl, ness_tbl, keys='APOGEE_ID', join_type='outer')\n",
+    "assert len(tbl_with_ness) == len(tbl)"
    ]
   },
   {
@@ -391,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for name in full_catalog.colnames[:18] + full_catalog.colnames[33:37]:\n",
+    "for name in full_catalog.colnames[:30]:\n",
     "    c1 = '\\\\texttt{{{0}}}'.format(name.replace('_', '\\\\_'))\n",
     "    try:\n",
     "        c2 = '{0:latex_inline}'.format(full_catalog[name].unit)\n",
@@ -511,6 +552,15 @@
    "outputs": [],
    "source": [
     "full_catalog.write(path.join(table_path, 'highK-unimodal.fits'), overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = QTable.read(path.join(table_path, 'highK-unimodal.fits'), astropy_native=True)"
    ]
   },
   {
