--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -68,10 +68,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unimodal = QTable.read(path.join(table_path, 'highK-unimodal.fits'))\n",
-    "bimodal = QTable.read(path.join(table_path, 'highK-bimodal.fits'))\n",
-    "clean_uni = unimodal[unimodal['clean_flag'] == 0]\n",
-    "clean_bi = bimodal[bimodal['clean_flag'] == 0]\n",
+    "unimodal = QTable.read(path.join(table_path, 'highK-unimodal.fits'), astropy_native=True)\n",
+    "bimodal = QTable.read(path.join(table_path, 'highK-bimodal.fits'), astropy_native=True)\n",
+    "clean_uni = unimodal[(unimodal['clean_flag'] == 0) & (unimodal['LOGG'] > 0) & (unimodal['TEFF'] > 0)]\n",
+    "clean_bi = bimodal[(bimodal['clean_flag'] == 0) & (bimodal['LOGG'] > 0) & (bimodal['TEFF'] > 0)]\n",
     "\n",
     "print('{0} unimodal, {1} clean'.format(len(unimodal), len(clean_uni)))\n",
     "print('{0} bimodal, {1} clean'.format(len(bimodal)//2, len(clean_bi)//2))"
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Masses"
+    "## logg-Teff, logg-Period"
    ]
   },
   {
@@ -145,11 +145,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_asini(P, e, K, m1, m2):\n",
-    "    return (P/(2*np.pi) * np.sqrt(1-e**2) * K * (m1+m2) / m2).to(u.au)\n",
+    "uni_style = dict(alpha=0.7, marker='o', color='k', linewidth=0, s=14)\n",
+    "bi_style = dict(alpha=0.3, marker='s', color='tab:blue', s=15, zorder=-10, linewidth=0)\n",
+    "err_alpha = 0.2\n",
     "\n",
-    "def get_a2sini(P, e, K, m1, m2):\n",
-    "    return (P/(2*np.pi) * (m1/m2) * np.sqrt(1-e**2) * K).to(u.au)"
+    "fig, axes = plt.subplots(1, 2, figsize=(9., 5), sharey=True)\n",
+    "\n",
+    "ax = axes[0]\n",
+    "\n",
+    "ax.scatter(clean_uni['TEFF'], clean_uni['LOGG'], \n",
+    "           label='unimodal', **uni_style)\n",
+    "ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "           label='bimodal', **bi_style)\n",
+    "ax.legend(loc='upper left', fontsize=14)\n",
+    "\n",
+    "ax.errorbar(clean_uni['TEFF'], clean_uni['LOGG'],\n",
+    "            xerr=clean_uni['TEFF_ERR'], yerr=clean_uni['LOGG_ERR'],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "ax.errorbar(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "            xerr=clean_bi['TEFF_ERR'][::2], yerr=clean_bi['LOGG_ERR'][::2],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-100, \n",
+    "            color=bi_style['color'])\n",
+    "\n",
+    "ax.set_xlim(5900, 3600)\n",
+    "ax.set_ylim(4, 0)\n",
+    "ax.set_xlabel(r'temperature, $T_{\\rm eff}$ [K]')\n",
+    "ax.set_ylabel(r'surface gravity, $\\log g$')\n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "ax = axes[1]\n",
+    "ax.scatter(clean_uni['P'], clean_uni['LOGG'], **uni_style)\n",
+    "ax.errorbar(clean_uni['P'].value, clean_uni['LOGG'],\n",
+    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['LOGG_ERR'],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
+    "ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
+    "        np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
+    "        marker='', linestyle='-', alpha=err_alpha,\n",
+    "        color=bi_style['color'])\n",
+    "\n",
+    "loggs = np.linspace(0, 4, 128)\n",
+    "Psurfs = period_at_surface(1.*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
+    "color = '#bbbbbb'\n",
+    "ax.plot(Psurfs.to(u.day).value, loggs, marker='', zorder=-100, \n",
+    "        color=color, linewidth=1)\n",
+    "ax.axvline(period_at_surface(1.*u.Msun, logg=0, e=0, M2=0*u.Msun).value, \n",
+    "           linestyle='--', zorder=-100, color=color)\n",
+    "ax.axhline(2.3, linestyle='--', zorder=-100, color=color)\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlabel('period, $P$ [day]')\n",
+    "ax.set_xlim(0.8, 2000)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "fig.savefig(path.join(plot_path, 'P-Teff-logg.pdf'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Masses"
    ]
   },
   {
@@ -170,7 +231,7 @@
     "ax = axes[0]\n",
     "\n",
     "uni_cats = [uni_cat[uni_cat['converged']], uni_cat[~uni_cat['converged']]]\n",
-    "uni_colors = ['k', '#aaaaaa']\n",
+    "uni_colors = ['k', '#888888']\n",
     "uni_zorders = [10, -10]\n",
     "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
     "    ax.errorbar(cat['M1'].value, cat['M2_min'].value,\n",
@@ -218,24 +279,10 @@
     "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
     "    print(len(cat))\n",
     "    \n",
-    "    q = cat['M2_min'] / cat['M1']\n",
-    "    asini = get_asini(cat['P'], cat['e'], cat['K'], cat['M1'], cat['M2_min'])\n",
-    "    R1 = np.sqrt(G * cat['M1'] / (10**cat['LOGG']*u.cm/u.s**2)).to(u.au)\n",
-    "    \n",
-    "    xerr = q * np.sqrt((cat['M2_min_err']/cat['M2_min'])**2 + (cat['M1_err']/cat['M1'])**2).value    \n",
-    "    ns = 10000\n",
-    "    asinis = get_asini(np.random.normal(cat['P'], cat['P_err'], (ns, len(cat)))*cat['P'].unit, \n",
-    "                       np.random.normal(cat['e'], cat['e_err'], (ns, len(cat))),\n",
-    "                       np.random.normal(cat['K'], cat['K_err'], (ns, len(cat)))*cat['K'].unit,\n",
-    "                       np.random.normal(cat['M1'], cat['M1_err'], (ns, len(cat)))*cat['M1'].unit,\n",
-    "                       np.random.normal(cat['M2_min'], cat['M2_min_err'], (ns, len(cat)))*cat['M2_min'].unit)\n",
-    "\n",
-    "    loggs = np.random.normal(cat['LOGG'], cat['LOGG_ERR'], (ns, len(cat)))\n",
-    "    R1s = np.sqrt(G * np.random.normal(cat['M1'], cat['M1_err'], (ns, len(cat)))*cat['M1'].unit / (10**loggs*u.cm/u.s**2)).to(u.au)\n",
-    "    yerr = np.std(R1s/asinis, axis=0)\n",
-    "    \n",
-    "    ax.errorbar(q, R1/asini,\n",
-    "                xerr=xerr, yerr=yerr,\n",
+    "    y = (cat['R1']/cat['a_sini']).decompose()\n",
+    "    yerr = y * np.sqrt((cat['R1_err']/cat['R1'])**2 + (cat['a_sini_err']/cat['a_sini'])).decompose()\n",
+    "    ax.errorbar(cat['q_min'], y,\n",
+    "                xerr=cat['q_min_err'], yerr=yerr,\n",
     "                marker='o', linestyle='none', zorder=zorder,\n",
     "                markersize=5, color=color, alpha=0.8)\n",
     "\n",
@@ -258,7 +305,7 @@
     "\n",
     "ax.plot(qgrid, r1, marker='', color='#aaaaaa', zorder=-100, linestyle='--')\n",
     "ax.set_xlim(1e-2, 1E1)\n",
-    "ax.set_ylim(1e-3, 1E0)\n",
+    "ax.set_ylim(6e-3, 1E0)\n",
     "ax.set_xscale('log')\n",
     "ax.set_yscale('log')\n",
     "ax.set_xlabel(r'$q_{\\rm min}$')\n",
@@ -369,8 +416,8 @@
     "os.makedirs(_plot_path, exist_ok=True)\n",
     "\n",
     "with h5py.File(samples_file) as f:\n",
-    "    for apogee_id in ['2M01415794+8520066', # NS/WD??\n",
-    "                      '2M04015112+5316431', # BH/NS uni\n",
+    "    for apogee_id in ['2M04015112+5316431', # BH/NS uni\n",
+    "                      '2M01415794+8520066', # NS/WD??\n",
     "                      '2M01231070+1801407', # BH/NS bi\n",
     "                      '2M04582049+2232000', # BD bi\n",
     "                      '2M20130687+2044173']: # BD bi\n",
@@ -426,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File('../../cache/2M01231070+1801407.hdf5') as f:\n",
+    "with h5py.File('../../cache/2M04015112+5316431.hdf5') as f:\n",
     "    new_samples = JokerSamples.from_hdf5(f)\n",
     "    \n",
     "# new_samples = samples"
@@ -472,6 +519,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "m2s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "_, bins, _ = plt.hist(m2s.value, bins='auto', normed=True);\n",
     "plt.hist(m2s_2.value, bins=bins, normed=True);\n",
     "plt.axvline(m1.value)\n",
@@ -498,8 +554,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wise = ascii.read('/Users/adrian/Downloads/irsa_catalog_search_results_wise.tbl')\n",
-    "wise = wise[(wise['source_id_mf'] == '0206p181_ac51-027396')]"
+    "wise = ascii.read('/Users/adrian/Downloads/irsa_catalog_search_results.tbl')\n",
+    "# wise = wise[(wise['source_id_mf'] == '0206p181_ac51-027396')]"
    ]
   },
   {
@@ -508,9 +564,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.errorbar(((wise['mjd']) / new_samples['P'].value) % 1, wise['w1mpro_ep'], wise['w1sigmpro_ep'],\n",
+    "plt.errorbar(((wise['mjd']) / new_samples['P'].value[0]) % 1, wise['w1mpro_ep'], wise['w1sigmpro_ep'],\n",
     "             linestyle='none', marker='o')\n",
-    "plt.ylim(12.2, 11.7)"
+    "plt.ylim(12.4, 12)\n",
+    "plt.xlim(0, 1)"
    ]
   },
   {
