--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -915,6 +915,11 @@ $q_{\textrm{min}}$, for the same systems and markers in left panel.
 
 \todo{comment on short period shit at low logg, eccentricities}
 
+\todo{Discuss tidal circ and mention worth pursuing. Don't say we are going to
+do this. Emphasize that the data contain information about those things.}
+
+\todo{High-mass companions}
+
 \subsection{Assumptions}
 \label{sec:discuss-assumptions}
 
