--- a/paper/1-catalog/twoface-catalog.tex
+++ b/paper/1-catalog/twoface-catalog.tex
@@ -838,9 +838,19 @@ visual inspection (\texttt{clean\_flag == 0}).
 We additionally restrict to stars with $\log g > 2$ to avoid upper RGB stars
 that may have coherent oscillations that mimic RV modulations from companions.
 
-\todo{Plot these stars in logg - Teff}
+\todo{here:} \figurename~\ref{fig:logg-teff-p} ...
 
-\todo{Plot P-logg}
+% Notebook: "Results"
+\begin{figure}[h]
+\begin{center}
+\includegraphics[width=\textwidth]{mass}
+\end{center}
+\caption{%
+\textit{Left panel:}
+\textit{Right panel:}
+\label{fig:logg-teff-p}
+}
+\end{figure}
 
 \subsection{Companion masses and mass ratios}
 
