--- a/paper/1-catalog/tables/unimodal-schema.tex
+++ b/paper/1-catalog/tables/unimodal-schema.tex
@@ -42,6 +42,22 @@
         \texttt{M2\_min\_err}      & $\mathrm{M_{\odot}}$     & \\
         \texttt{clean\_flag}       &                          &
             [0 = good, 1 = suspicious, 2 = bad], score from by-eye vetting \\
+        \texttt{q\_min}            &                          &
+            minimum mass ratio \\
+        \texttt{q\_min\_err}       &                          & \\
+        \texttt{R1}                & $\mathrm{R_{\odot}}$     &
+            radius of the primary star \\
+        \texttt{R1\_err}           & $\mathrm{R_{\odot}}$     & \\
+        \texttt{a\_sini}           & $\mathrm{AU}$            &
+            projected separation \\
+        \texttt{a\_sini\_err}      & $\mathrm{AU}$            & \\
+        \texttt{a2\_sini}          & $\mathrm{AU}$            &
+            projected semi-major axis of the companion orbit \\
+        \texttt{a2\_sini\_err}     & $\mathrm{AU}$            & \\
+        \texttt{DR14RC}            & \texttt{True}/\texttt{False} &
+            if the star is included in the \apogee\ \DR\ red clump catalog\\
+        \texttt{TINGRC}            & \texttt{True}/\texttt{False} &
+            if the star is included in red clump catalog of \citet{Ting:2018}\\
         \vdots & & all columns from \citet{Ness:2015} \\
         \vdots & & all columns from \apogee\ \DR\ \texttt{allStar} file \\
         \hline
