--- a/notebooks/figures/HighK-unimodal.ipynb
+++ b/notebooks/figures/HighK-unimodal.ipynb
@@ -386,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finally, add a binary flag \"DR14RC\" if in DR14 RC catalog"
+    "### Add binary flags \"DR14RC\" if in DR14 RC catalog, \"TINGRC\" if in Yuan-Sen's recent paper:"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rc = Table.read('/Users/adrian/data/APOGEE_DR14/apogee-rc-DR14.fits')"
+    "from astropy.io import ascii"
    ]
   },
   {
@@ -404,7 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full_catalog['DR14RC'] = np.isin(full_catalog['APOGEE_ID'], rc['APOGEE_ID'])"
+    "rcdr14 = Table.read('/Users/adrian/data/APOGEE_DR14/apogee-rc-DR14.fits')\n",
+    "rcting = ascii.read('../../data/ting-2018.txt')"
    ]
   },
   {
@@ -413,7 +414,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(full_catalog)"
+    "(rcting['Classification'] == 'RC_Pristine').sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "full_catalog['DR14RC'] = np.isin(full_catalog['APOGEE_ID'], rcdr14['APOGEE_ID'])\n",
+    "full_catalog['TINGRC'] = np.isin(full_catalog['APOGEE_ID'], rcting[rcting['Classification'] == 'RC_Pristine']['Designation'])\n",
+    "# full_catalog['TINGRC'] = np.isin(full_catalog['APOGEE_ID'], rcting['Designation'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(full_catalog), full_catalog['DR14RC'].sum(), full_catalog['TINGRC'].sum()"
    ]
   },
   {
@@ -472,35 +493,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_path = '../../plots/unimodal/'\n",
-    "os.makedirs(_path, exist_ok=True)\n",
+    "# _path = '../../plots/unimodal/'\n",
+    "# os.makedirs(_path, exist_ok=True)\n",
     "\n",
-    "units = dict()\n",
-    "for c in full_catalog.colnames:\n",
-    "    if full_catalog[c].unit is not None:\n",
-    "        units[c] = full_catalog[c].unit\n",
-    "    else:\n",
-    "        units[c] = 1.\n",
+    "# units = dict()\n",
+    "# for c in full_catalog.colnames:\n",
+    "#     if full_catalog[c].unit is not None:\n",
+    "#         units[c] = full_catalog[c].unit\n",
+    "#     else:\n",
+    "#         units[c] = 1.\n",
     "    \n",
-    "for row in full_catalog:\n",
-    "    apogee_id = row['APOGEE_ID']\n",
-    "    star = AllStar.get_apogee_id(session, apogee_id)\n",
-    "    data = star.apogeervdata()\n",
+    "# for row in full_catalog:\n",
+    "#     apogee_id = row['APOGEE_ID']\n",
+    "#     star = AllStar.get_apogee_id(session, apogee_id)\n",
+    "#     data = star.apogeervdata()\n",
     "    \n",
-    "    row = row[JokerSamples._valid_keys]\n",
-    "    sample = JokerSamples(**{c: row[c]*units[c] for c in row.colnames})\n",
-    "    sample.t0 = data.t0\n",
+    "#     row = row[JokerSamples._valid_keys]\n",
+    "#     sample = JokerSamples(**{c: row[c]*units[c] for c in row.colnames})\n",
+    "#     sample.t0 = data.t0\n",
     "    \n",
-    "    fig, axes = plt.subplots(1, 2, figsize=(12, 5), sharey=True)\n",
+    "#     fig, axes = plt.subplots(1, 2, figsize=(12, 5), sharey=True)\n",
     "    \n",
-    "    plot_data_orbits(data, sample[None], highlight_P_extrema=False, \n",
-    "                     ax=axes[0], plot_kwargs=dict(alpha=1., linewidth=1.))\n",
-    "    plot_phase_fold(data, sample, ax=axes[1], label=False)\n",
-    "    axes[1].set_xlabel('phase')\n",
-    "    axes[0].set_title(apogee_id)\n",
-    "    fig.tight_layout()\n",
-    "    fig.savefig(path.join(_path, '{0}.png'.format(apogee_id)), dpi=200)\n",
-    "    plt.close(fig)"
+    "#     plot_data_orbits(data, sample[None], highlight_P_extrema=False, \n",
+    "#                      ax=axes[0], plot_kwargs=dict(alpha=1., linewidth=1.))\n",
+    "#     plot_phase_fold(data, sample, ax=axes[1], label=False)\n",
+    "#     axes[1].set_xlabel('phase')\n",
+    "#     axes[0].set_title(apogee_id)\n",
+    "#     fig.tight_layout()\n",
+    "#     fig.savefig(path.join(_path, '{0}.png'.format(apogee_id)), dpi=200)\n",
+    "#     plt.close(fig)"
    ]
   },
   {
