--- a/paper/1-catalog/refs.bib
+++ b/paper/1-catalog/refs.bib
@@ -1,13 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Adrian Price-Whelan at 2018-03-10 09:57:59 -0500 
+%% Created for Adrian Price-Whelan at 2018-03-19 19:22:07 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Garcia-Perez:2016,
+	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
+	Adsurl = {http://adsabs.harvard.edu/abs/2016AJ....151..144G},
+	Archiveprefix = {arXiv},
+	Author = {{Garc{\'{\i}}a P{\'e}rez}, A.~E. and {Allende Prieto}, C. and {Holtzman}, J.~A. and {Shetrone}, M. and {M{\'e}sz{\'a}ros}, S. and {Bizyaev}, D. and {Carrera}, R. and {Cunha}, K. and {Garc{\'{\i}}a-Hern{\'a}ndez}, D.~A. and {Johnson}, J.~A. and {Majewski}, S.~R. and {Nidever}, D.~L. and {Schiavon}, R.~P. and {Shane}, N. and {Smith}, V.~V. and {Sobeck}, J. and {Troup}, N. and {Zamora}, O. and {Weinberg}, D.~H. and {Bovy}, J. and {Eisenstein}, D.~J. and {Feuillet}, D. and {Frinchaboy}, P.~M. and {Hayden}, M.~R. and {Hearty}, F.~R. and {Nguyen}, D.~C. and {O'Connell}, R.~W. and {Pinsonneault}, M.~H. and {Wilson}, J.~C. and {Zasowski}, G.},
+	Date-Added = {2018-03-19 23:22:03 +0000},
+	Date-Modified = {2018-03-19 23:22:06 +0000},
+	Doi = {10.3847/0004-6256/151/6/144},
+	Eid = {144},
+	Eprint = {1510.07635},
+	Journal = {\aj},
+	Keywords = {Galaxy: center, Galaxy: structure, methods: data analysis, stars: abundances, stars: atmospheres},
+	Month = jun,
+	Pages = {144},
+	Primaryclass = {astro-ph.SR},
+	Title = {{ASPCAP: The APOGEE Stellar Parameter and Chemical Abundances Pipeline}},
+	Volume = 151,
+	Year = 2016,
+	Bdsk-Url-1 = {https://dx.doi.org/10.3847/0004-6256/151/6/144}}
 
 @article{Tokovinin:2018,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
