--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -146,6 +146,9 @@
    "outputs": [],
    "source": [
     "uni_style = dict(alpha=0.7, marker='o', color='k', linewidth=0, s=14)\n",
+    "uni_style_r = uni_style.copy()\n",
+    "uni_style_r['color'] = 'tab:red'\n",
+    "\n",
     "bi_style = dict(alpha=0.3, marker='s', color='tab:blue', s=15, zorder=-10, linewidth=0)\n",
     "err_alpha = 0.2\n",
     "\n",
@@ -153,10 +156,13 @@
     "\n",
     "ax = axes[0]\n",
     "\n",
-    "ax.scatter(clean_uni['TEFF'], clean_uni['LOGG'], \n",
+    "ax.scatter(clean_uni[~clean_uni['TINGRC']]['TEFF'], clean_uni[~clean_uni['TINGRC']]['LOGG'], \n",
     "           label='unimodal', **uni_style)\n",
-    "ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
-    "           label='bimodal', **bi_style)\n",
+    "ax.scatter(clean_uni[clean_uni['TINGRC']]['TEFF'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "           label='unimodal RC', **uni_style_r)\n",
+    "\n",
+    "# ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "#            label='bimodal', **bi_style)\n",
     "ax.legend(loc='upper left', fontsize=14)\n",
     "\n",
     "ax.errorbar(clean_uni['TEFF'], clean_uni['LOGG'],\n",
@@ -164,10 +170,10 @@
     "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
     "            color=uni_style['color'])\n",
     "\n",
-    "ax.errorbar(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
-    "            xerr=clean_bi['TEFF_ERR'][::2], yerr=clean_bi['LOGG_ERR'][::2],\n",
-    "            marker='', linestyle='none', alpha=err_alpha, zorder=-100, \n",
-    "            color=bi_style['color'])\n",
+    "# ax.errorbar(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "#             xerr=clean_bi['TEFF_ERR'][::2], yerr=clean_bi['LOGG_ERR'][::2],\n",
+    "#             marker='', linestyle='none', alpha=err_alpha, zorder=-100, \n",
+    "#             color=bi_style['color'])\n",
     "\n",
     "ax.set_xlim(5900, 3600)\n",
     "ax.set_ylim(4, 0)\n",
@@ -177,17 +183,21 @@
     "# ---\n",
     "\n",
     "ax = axes[1]\n",
-    "ax.scatter(clean_uni['P'], clean_uni['LOGG'], **uni_style)\n",
+    "ax.scatter(clean_uni[~clean_uni['TINGRC']]['P'], clean_uni[~clean_uni['TINGRC']]['LOGG'], \n",
+    "           label='unimodal', **uni_style)\n",
+    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "           label='unimodal RC', **uni_style_r)\n",
+    "\n",
     "ax.errorbar(clean_uni['P'].value, clean_uni['LOGG'],\n",
     "            xerr=clean_uni['P_err'].value, yerr=clean_uni['LOGG_ERR'],\n",
     "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
     "            color=uni_style['color'])\n",
     "\n",
-    "ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
-    "ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
-    "        np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
-    "        marker='', linestyle='-', alpha=err_alpha,\n",
-    "        color=bi_style['color'])\n",
+    "# ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
+    "# ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
+    "#         np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
+    "#         marker='', linestyle='-', alpha=err_alpha,\n",
+    "#         color=bi_style['color'])\n",
     "\n",
     "loggs = np.linspace(0, 4, 128)\n",
     "Psurfs = period_at_surface(1.*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
@@ -203,7 +213,140 @@
     "ax.set_xlim(0.8, 2000)\n",
     "\n",
     "fig.tight_layout()\n",
-    "fig.savefig(path.join(plot_path, 'P-Teff-logg.pdf'))"
+    "# fig.savefig(path.join(plot_path, 'P-Teff-logg.pdf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uni_style = dict(alpha=0.7, marker='o', color='k', linewidth=0, s=14)\n",
+    "uni_style_r = dict(alpha=0.7, marker='^', color='tab:red', linewidth=0, s=26)\n",
+    "\n",
+    "bi_style = dict(alpha=0.3, marker='s', color='tab:blue', s=15, zorder=-10, linewidth=0)\n",
+    "err_alpha = 0.2\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(9, 9), sharey='row', sharex='col')\n",
+    "\n",
+    "ax = axes[0, 0]\n",
+    "uni_cats = [clean_uni[clean_uni['converged']], clean_uni[~clean_uni['converged']]]\n",
+    "uni_colors = ['k', '#888888']\n",
+    "uni_sizes = [14, 12]\n",
+    "uni_zorders = [10, -10]\n",
+    "uni_labels = ['unimodal, MCMC', r'unimodal, The Joker']\n",
+    "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
+    "    style = uni_style.copy()\n",
+    "    style['color'] = color\n",
+    "    style['zorder'] = zorder\n",
+    "    style['s'] = s\n",
+    "    ax.scatter(cat[~cat['TINGRC']]['P'], cat[~cat['TINGRC']]['e'], \n",
+    "               label=label, **style)\n",
+    "    \n",
+    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['e'], \n",
+    "           label='unimodal RC', **uni_style_r)\n",
+    "\n",
+    "ax.errorbar(clean_uni['P'].value, clean_uni['e'],\n",
+    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['e_err'],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "# ax.scatter(clean_bi['P'], clean_bi['e'], **bi_style)\n",
+    "# ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
+    "#         np.vstack((np.array(clean_bi['e'])[::2], np.array(clean_bi['e'])[1::2])), \n",
+    "#         marker='', linestyle='-', alpha=err_alpha,\n",
+    "#         color=bi_style['color'])\n",
+    "\n",
+    "ax.set_ylim(-0.02, 1)\n",
+    "ax.set_ylabel(r'eccentricity, $e$')\n",
+    "\n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "ax = axes[1, 1]\n",
+    "\n",
+    "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
+    "    style = uni_style.copy()\n",
+    "    style['color'] = color\n",
+    "    style['zorder'] = zorder\n",
+    "    style['s'] = s\n",
+    "    ax.scatter(cat[~cat['TINGRC']]['TEFF'], cat[~cat['TINGRC']]['LOGG'], \n",
+    "               label=label, **style)\n",
+    "\n",
+    "ax.scatter(clean_uni[clean_uni['TINGRC']]['TEFF'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "           label='unimodal, red clump', **uni_style_r)\n",
+    "\n",
+    "ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "           label='bimodal', **bi_style)\n",
+    "ax.legend(loc='upper left', fontsize=14, bbox_to_anchor=(-0.02, 1.414))\n",
+    "\n",
+    "ax.errorbar(clean_uni['TEFF'], clean_uni['LOGG'],\n",
+    "            xerr=clean_uni['TEFF_ERR'], yerr=clean_uni['LOGG_ERR'],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "ax.errorbar(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
+    "            xerr=clean_bi['TEFF_ERR'][::2], yerr=clean_bi['LOGG_ERR'][::2],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-100, \n",
+    "            color=bi_style['color'])\n",
+    "\n",
+    "ax.set_xlim(5900, 3600)\n",
+    "ax.set_ylim(4, 0)\n",
+    "ax.set_xlabel(r'temperature, $T_{\\rm eff}$ [K]')\n",
+    "\n",
+    "# ---\n",
+    "\n",
+    "ax = axes[1, 0]\n",
+    "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
+    "    style = uni_style.copy()\n",
+    "    style['color'] = color\n",
+    "    style['zorder'] = zorder\n",
+    "    style['s'] = s\n",
+    "    ax.scatter(cat[~cat['TINGRC']]['P'], cat[~cat['TINGRC']]['LOGG'], \n",
+    "               label=label, **style)\n",
+    "    \n",
+    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "           **uni_style_r)\n",
+    "\n",
+    "ax.errorbar(clean_uni['P'].value, clean_uni['LOGG'],\n",
+    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['LOGG_ERR'],\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
+    "ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
+    "        np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
+    "        marker='', linestyle='--', alpha=0.1,\n",
+    "        color=bi_style['color'])\n",
+    "\n",
+    "loggs = np.linspace(0, 4, 128)\n",
+    "Psurfs = period_at_surface(1.*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
+    "color = '#bbbbbb'\n",
+    "ax.plot(Psurfs.to(u.day).value, loggs, marker='', zorder=-100, \n",
+    "        color=color, linewidth=1)\n",
+    "ax.axvline(period_at_surface(1.*u.Msun, logg=0, e=0, M2=0*u.Msun).value, \n",
+    "           linestyle='--', zorder=-100, color=color)\n",
+    "ax.axhline(2.3, linestyle='--', zorder=-100, color=color)\n",
+    "\n",
+    "ax.set_xscale('log')\n",
+    "ax.set_xlabel('period, $P$ [day]')\n",
+    "ax.set_ylabel(r'surface gravity, $\\log g$')\n",
+    "ax.set_xlim(0.8, 2000)\n",
+    "\n",
+    "fig.tight_layout()\n",
+    "axes[0, 1].set_visible(False)\n",
+    "\n",
+    "fig.savefig(path.join(plot_path, 'P-Teff-logg-e.pdf'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_uni[clean_uni['TINGRC'] & (clean_uni['P'] < 150*u.day)]['APOGEE_ID']"
    ]
   },
   {
