change cut to have 1% FPR

--- a/notebooks/figures/Sample K cuts.ipynb
+++ b/notebooks/figures/Sample K cuts.ipynb
@@ -170,7 +170,7 @@
    "outputs": [],
    "source": [
     "# cut = -0.88 # 5% FPR\n",
-    "cut = 0. # <1% FPR\n",
+    "cut = -0.12 # 1% FPR\n",
     "np.sum(np.nanpercentile(ln_control_K, 1., axis=1) > cut) / control_K.shape[0]"
    ]
   },
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Summary: if we cut at $\\ln K > 0$, <1% false-positive rate"
+    "### Summary: if we cut at $\\ln K > -0.12$, 1% false-positive rate"
    ]
   },
   {
@@ -227,7 +227,7 @@
     "high_K_tbl = Table()\n",
     "high_K_tbl['APOGEE_ID'] = np.asarray(K_per.index).astype('U20')\n",
     "high_K_tbl['lnK_per_1'] = np.asarray(K_per)\n",
-    "high_K_tbl.write(path.join(table_path, 'lnK-percentiles.fits'))"
+    "high_K_tbl.write(path.join(table_path, 'lnK-percentiles.fits'), overwrite=True)"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_K_tbl[:8].write(path.join(table_path, 'lnK-percentiles.tex'))"
+    "high_K_tbl[:8].write(path.join(table_path, 'lnK-percentiles.tex'), overwrite=True)"
    ]
   },
   {
@@ -293,7 +293,7 @@
     "control_perc = np.nanpercentile(ln_control_K, 1, axis=1)\n",
     "bins = np.linspace(-12, 10, 64)\n",
     "ax.hist(K_per, bins=bins, \n",
-    "        alpha=0.75, label='APOGEE sample', normed=True,\n",
+    "        alpha=1, label='APOGEE sample', normed=True,\n",
     "        histtype='stepfilled', rasterized=True)\n",
     "\n",
     "ax.hist(control_perc, bins=bins, \n",
@@ -306,7 +306,7 @@
     "ax.set_xlabel(r'$\\ln \\left(\\frac{K}{{\\rm km}\\,{s}^{-1}} \\right)$')\n",
     "ax.set_ylabel('density')\n",
     "\n",
-    "ax.axvline(0, linestyle='--', zorder=10, alpha=1., color='tab:orange')\n",
+    "ax.axvline(cut, linestyle='--', zorder=10, alpha=1., color='tab:orange')\n",
     "\n",
     "fig.tight_layout()\n",
     "fig.savefig(path.join(plot_path, 'lnK-percentiles.pdf'), dpi=250)"
