change cut in lnK

--- a/notebooks/figures/HighK-multimodal.ipynb
+++ b/notebooks/figures/HighK-multimodal.ipynb
@@ -70,7 +70,8 @@
    "source": [
     "high_K_stars = session.query(AllStar).join(StarResult).filter(StarResult.status_id.in_([1, 4]))\\\n",
     "                      .filter(StarResult.high_K).all()\n",
-    "len(high_K_stars)"
+    "print(len(high_K_stars))\n",
+    "print(session.query(AllStar).join(StarResult).filter(StarResult.high_K).count())"
    ]
   },
   {
@@ -157,6 +158,15 @@
     "nsamples = np.array(nsamples)\n",
     "bimodal = np.array(bimodal)\n",
     "MAP_samples = np.array(MAP_samples)\n",
+    "bimodal.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bimodal.sum()"
    ]
   },
@@ -323,15 +333,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with h5py.File(samples_file, 'r') as f:\n",
-    "    for star in tqdm.tqdm(np.array(high_K_stars)[bimodal]):\n",
-    "        samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
-    "        data = star.apogeervdata()\n",
+    "# with h5py.File(samples_file, 'r') as f:\n",
+    "#     for star in tqdm.tqdm(np.array(high_K_stars)[bimodal]):\n",
+    "#         samples = JokerSamples.from_hdf5(f[star.apogee_id])\n",
+    "#         data = star.apogeervdata()\n",
     "        \n",
-    "        fig = plot_two_panel(data, samples, \n",
-    "                             plot_data_orbits_kw=dict(highlight_P_extrema=False))\n",
-    "        fig.savefig('../../plots/bimodal/{0}.png'.format(star.apogee_id), dpi=200)\n",
-    "        plt.close(fig)"
+    "#         fig = plot_two_panel(data, samples, \n",
+    "#                              plot_data_orbits_kw=dict(highlight_P_extrema=False))\n",
+    "#         fig.savefig('../../plots/bimodal/{0}.png'.format(star.apogee_id), dpi=200)\n",
+    "#         plt.close(fig)"
    ]
   },
   {
@@ -557,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
