--- a/notebooks/figures/Results.ipynb
+++ b/notebooks/figures/Results.ipynb
@@ -34,7 +34,7 @@
     "from twoface.db import (db_connect, AllStar, AllVisit, AllVisitToAllStar, NessRG,\n",
     "                        StarResult, Status, JokerRun)\n",
     "from twoface.plot import plot_two_panel, plot_phase_fold\n",
-    "from twoface.mass import get_m2_min, mf, period_at_surface\n",
+    "from twoface.mass import get_m2_min, mf, period_at_surface, asini\n",
     "from twoface.log import log as logger\n",
     "logger.setLevel(100)"
    ]
@@ -222,33 +222,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "uni_colors = ['k', '#555555']\n",
+    "uni_sizes = [14, 8]\n",
+    "uni_zorders = [10, -10]\n",
+    "uni_labels = ['unimodal, MCMC', r'unimodal, The Joker']\n",
     "uni_style = dict(alpha=0.7, marker='o', color='k', linewidth=0, s=14)\n",
-    "uni_style_r = dict(alpha=0.7, marker='^', color='tab:red', linewidth=0, s=26)\n",
     "\n",
-    "bi_style = dict(alpha=0.3, marker='s', color='tab:blue', s=15, zorder=-10, linewidth=0)\n",
-    "err_alpha = 0.2\n",
+    "bi_style = dict(alpha=0.5, marker='s', color='tab:blue', s=12, zorder=-10, linewidth=0)\n",
+    "bi_line_style = dict(marker='', linestyle='-', alpha=bi_style['alpha']/3,\n",
+    "                     color=bi_style['color'])\n",
+    "\n",
+    "err_alpha = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uni_style_r = dict(alpha=0.7, marker='^', color='tab:red', linewidth=0, s=26)\n",
+    "uni_converged = clean_uni[clean_uni['converged']]\n",
     "\n",
     "fig, axes = plt.subplots(2, 2, figsize=(9, 9), sharey='row', sharex='col')\n",
     "\n",
     "ax = axes[0, 0]\n",
     "uni_cats = [clean_uni[clean_uni['converged']], clean_uni[~clean_uni['converged']]]\n",
-    "uni_colors = ['k', '#888888']\n",
-    "uni_sizes = [14, 12]\n",
-    "uni_zorders = [10, -10]\n",
-    "uni_labels = ['unimodal, MCMC', r'unimodal, The Joker']\n",
     "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
     "    style = uni_style.copy()\n",
     "    style['color'] = color\n",
     "    style['zorder'] = zorder\n",
     "    style['s'] = s\n",
-    "    ax.scatter(cat[~cat['TINGRC']]['P'], cat[~cat['TINGRC']]['e'], \n",
+    "    ax.scatter(cat['P'], cat['e'], \n",
     "               label=label, **style)\n",
     "    \n",
-    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['e'], \n",
-    "           label='unimodal RC', **uni_style_r)\n",
+    "# ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['e'], \n",
+    "#            label='unimodal RC', **uni_style_r)\n",
     "\n",
-    "ax.errorbar(clean_uni['P'].value, clean_uni['e'],\n",
-    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['e_err'],\n",
+    "ax.errorbar(uni_converged['P'].value, uni_converged['e'],\n",
+    "            xerr=uni_converged['P_err'].value, yerr=uni_converged['e_err'],\n",
     "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
     "            color=uni_style['color'])\n",
     "\n",
@@ -271,15 +283,15 @@
     "    style['color'] = color\n",
     "    style['zorder'] = zorder\n",
     "    style['s'] = s\n",
-    "    ax.scatter(cat[~cat['TINGRC']]['TEFF'], cat[~cat['TINGRC']]['LOGG'], \n",
+    "    ax.scatter(cat['TEFF'], cat['LOGG'], \n",
     "               label=label, **style)\n",
     "\n",
-    "ax.scatter(clean_uni[clean_uni['TINGRC']]['TEFF'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
-    "           label='unimodal, red clump', **uni_style_r)\n",
+    "# ax.scatter(clean_uni[clean_uni['TINGRC']]['TEFF'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "#            label='unimodal, red clump', **uni_style_r)\n",
     "\n",
     "ax.scatter(clean_bi['TEFF'][::2], clean_bi['LOGG'][::2],\n",
     "           label='bimodal', **bi_style)\n",
-    "ax.legend(loc='upper left', fontsize=14, bbox_to_anchor=(-0.02, 1.414))\n",
+    "ax.legend(loc='upper left', fontsize=14, bbox_to_anchor=(-0.02, 1.34))\n",
     "\n",
     "ax.errorbar(clean_uni['TEFF'], clean_uni['LOGG'],\n",
     "            xerr=clean_uni['TEFF_ERR'], yerr=clean_uni['LOGG_ERR'],\n",
@@ -303,31 +315,29 @@
     "    style['color'] = color\n",
     "    style['zorder'] = zorder\n",
     "    style['s'] = s\n",
-    "    ax.scatter(cat[~cat['TINGRC']]['P'], cat[~cat['TINGRC']]['LOGG'], \n",
+    "    ax.scatter(cat['P'], cat['LOGG'], \n",
     "               label=label, **style)\n",
     "    \n",
-    "ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
-    "           **uni_style_r)\n",
+    "# ax.scatter(clean_uni[clean_uni['TINGRC']]['P'], clean_uni[clean_uni['TINGRC']]['LOGG'], \n",
+    "#            **uni_style_r)\n",
     "\n",
-    "ax.errorbar(clean_uni['P'].value, clean_uni['LOGG'],\n",
-    "            xerr=clean_uni['P_err'].value, yerr=clean_uni['LOGG_ERR'],\n",
+    "ax.errorbar(uni_converged['P'].value, uni_converged['LOGG'],\n",
+    "            xerr=uni_converged['P_err'].value, yerr=uni_converged['LOGG_ERR'],\n",
     "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
     "            color=uni_style['color'])\n",
     "\n",
     "ax.scatter(clean_bi['P'], clean_bi['LOGG'], **bi_style)\n",
     "ax.plot(np.vstack((clean_bi['P'][::2].value, clean_bi['P'][1::2].value)), \n",
     "        np.vstack((np.array(clean_bi['LOGG'])[::2], np.array(clean_bi['LOGG'])[1::2])), \n",
-    "        marker='', linestyle='--', alpha=0.1,\n",
-    "        color=bi_style['color'])\n",
+    "        **bi_line_style)\n",
     "\n",
     "loggs = np.linspace(0, 4, 128)\n",
-    "Psurfs = period_at_surface(1.*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
-    "color = '#bbbbbb'\n",
+    "Psurfs = period_at_surface(1.35*u.Msun, logg=loggs, e=0, M2=0*u.Msun)\n",
     "ax.plot(Psurfs.to(u.day).value, loggs, marker='', zorder=-100, \n",
-    "        color=color, linewidth=1)\n",
-    "ax.axvline(period_at_surface(1.*u.Msun, logg=0, e=0, M2=0*u.Msun).value, \n",
-    "           linestyle='--', zorder=-100, color=color)\n",
-    "ax.axhline(2.3, linestyle='--', zorder=-100, color=color)\n",
+    "        color='tab:red', linewidth=2, alpha=0.5)\n",
+    "ax.axvline(period_at_surface(1.35*u.Msun, logg=0, e=0, M2=0*u.Msun).value, \n",
+    "           linestyle='-', zorder=-100, color='tab:red', alpha=0.3)\n",
+    "ax.axhline(2.3, linestyle='-', zorder=-100, color='tab:red', alpha=0.3)\n",
     "\n",
     "ax.set_xscale('log')\n",
     "ax.set_xlabel('period, $P$ [day]')\n",
@@ -363,6 +373,7 @@
    "outputs": [],
    "source": [
     "uni_cat = clean_uni[(clean_uni['LOGG'] > 2) & np.isfinite(clean_uni['M1'])]\n",
+    "uni_converged = uni_cat[uni_cat['converged']]\n",
     "\n",
     "bi_logg = np.array([AllStar.get_apogee_id(session, aid).logg \n",
     "                    for aid in clean_bi['APOGEE_ID']])\n",
@@ -374,20 +385,23 @@
     "ax = axes[0]\n",
     "\n",
     "uni_cats = [uni_cat[uni_cat['converged']], uni_cat[~uni_cat['converged']]]\n",
-    "uni_colors = ['k', '#888888']\n",
-    "uni_zorders = [10, -10]\n",
-    "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
-    "    ax.errorbar(cat['M1'].value, cat['M2_min'].value,\n",
-    "                xerr=cat['M1_err'].value,\n",
-    "                yerr=cat['M2_min_err'].value,\n",
-    "                marker='o', linestyle='none', \n",
-    "                markersize=5, color=color, alpha=0.8, zorder=zorder)\n",
+    "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
+    "    style = uni_style.copy()\n",
+    "    style['color'] = color\n",
+    "    style['zorder'] = zorder\n",
+    "    style['s'] = s\n",
+    "    ax.scatter(cat['M1'], cat['M2_min'], \n",
+    "               label=label, **style)\n",
     "\n",
-    "ax.scatter(bi_cat['M1'].value, bi_cat['M2_min'].value,\n",
-    "           marker='s', color='tab:blue', alpha=0.8, linewidth=0, s=13)\n",
+    "ax.errorbar(uni_converged['M1'].value, uni_converged['M2_min'].value,\n",
+    "            xerr=uni_converged['M1_err'].value, yerr=uni_converged['M2_min_err'].value,\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
+    "\n",
+    "ax.scatter(bi_cat['M1'].value, bi_cat['M2_min'].value, **bi_style)\n",
     "ax.plot(np.vstack((bi_cat['M1'].value[::2], bi_cat['M1'].value[1::2])), \n",
     "        np.vstack((bi_cat['M2_min'].value[::2], bi_cat['M2_min'].value[1::2])), \n",
-    "        marker='', linestyle='-', color='tab:blue', alpha=0.4)\n",
+    "        **bi_line_style)\n",
     "\n",
     "ax.plot(np.logspace(-3, 1, 1024), \n",
     "        np.logspace(-3, 1, 1024),\n",
@@ -419,36 +433,45 @@
     "\n",
     "ax = axes[1]\n",
     "\n",
-    "for cat, color, zorder in zip(uni_cats, uni_colors, uni_zorders):\n",
-    "    print(len(cat))\n",
+    "for cat, color, zorder, label, s in zip(uni_cats, uni_colors, uni_zorders, uni_labels, uni_sizes):\n",
+    "    style = uni_style.copy()\n",
+    "    style['color'] = color\n",
+    "    style['zorder'] = zorder\n",
+    "    style['s'] = s\n",
     "    \n",
     "    y = (cat['R1']/cat['a_sini']).decompose()\n",
-    "    yerr = y * np.sqrt((cat['R1_err']/cat['R1'])**2 + (cat['a_sini_err']/cat['a_sini'])).decompose()\n",
-    "    ax.errorbar(cat['q_min'], y,\n",
-    "                xerr=cat['q_min_err'], yerr=yerr,\n",
-    "                marker='o', linestyle='none', zorder=zorder,\n",
-    "                markersize=5, color=color, alpha=0.8)\n",
+    "    ax.scatter(cat['q_min'], y, \n",
+    "               label=label, **style)\n",
+    "    \n",
+    "cat = uni_converged\n",
+    "y = (cat['R1']/cat['a_sini']).decompose()\n",
+    "yerr = y * np.sqrt((cat['R1_err']/cat['R1'])**2 + (cat['a_sini_err']/cat['a_sini'])).decompose()\n",
+    "ax.errorbar(cat['q_min'], y,\n",
+    "            xerr=cat['q_min_err'], yerr=yerr,\n",
+    "            marker='', linestyle='none', alpha=err_alpha, zorder=-10, \n",
+    "            color=uni_style['color'])\n",
     "\n",
     "bi_logg = np.array([AllStar.get_apogee_id(session, aid).logg \n",
     "                    for aid in clean_bi['APOGEE_ID']])\n",
     "bi_cat = clean_bi[bi_logg > 2]\n",
     "bi_logg = bi_logg[bi_logg > 2]\n",
     "q = bi_cat['M2_min'] / bi_cat['M1']\n",
-    "asini = get_asini(bi_cat['P'], bi_cat['e'], bi_cat['K'], bi_cat['M1'], bi_cat['M2_min'])\n",
+    "asini_ = asini(bi_cat['P'], bi_cat['e'], bi_cat['K'], bi_cat['M1'], bi_cat['M2_min'])\n",
     "R1 = np.sqrt(G * bi_cat['M1'] / (10**bi_logg*u.cm/u.s**2)).to(u.au)\n",
-    "_y = R1/asini\n",
-    "ax.scatter(q, _y, \n",
-    "           marker='s', color='tab:blue', alpha=0.8, linewidth=0, s=13)\n",
+    "_y = R1 / asini_\n",
+    "ax.scatter(q, _y, label='bimodal', **bi_style)\n",
     "ax.plot(np.vstack((q[::2], q[1::2])), \n",
     "        np.vstack((_y[::2], _y[1::2])), \n",
-    "        marker='', linestyle='-', color='tab:blue', alpha=0.4)\n",
+    "        **bi_line_style)\n",
+    "\n",
+    "ax.legend(loc='upper right', fontsize=10, ncol=2)\n",
     "\n",
     "qgrid = np.linspace(1E-2, 1E1)\n",
     "r1 = 0.49*qgrid**(-2/3.) / (0.6*qgrid**(-2/3.) + np.log(1+qgrid**(-1/3)))\n",
     "\n",
     "ax.plot(qgrid, r1, marker='', color='#aaaaaa', zorder=-100, linestyle='--')\n",
     "ax.set_xlim(1e-2, 1E1)\n",
-    "ax.set_ylim(6e-3, 1E0)\n",
+    "ax.set_ylim(6e-3, 2E0)\n",
     "ax.set_xscale('log')\n",
     "ax.set_yscale('log')\n",
     "ax.set_xlabel(r'$q_{\\rm min}$')\n",
@@ -751,7 +774,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
